# town_meetings

./: .gitignore  README.md  client.py  pyproject.toml  read_website.py  ruff.toml  task_handler.py  with_tools.py
strategies/: __init__.py  save.py  yearly_archive_navigation.py  yearly_meeting_pages_with_pdf_links.py
strategies/expected/: catamount_community_forest_management_committee.json  not_real_committee.json
strategies/fixtures/expected/: catamount_community_forest_management_committee_old.json
strategies/fixtures/fake1/not_real_committee/: expected.json  params.json
strategies/inputs/fake1/: not_real_committee_params.json
strategies/inputs/yearly_archive_navigation/: catamount_community_forest_management_committee_params.json
strategies/params/test/: not_real_committee.json
strategies/utils/: save.py
tests/: test_fetching_strategies.py  test_run_test_case.py
tests/tools/: test_site_scraper.py
tools/: __init__.py  human_feedback.py  iterate_strategy.py  outputs.py  pytest_tool.py  site_scraper.py  store_expected_agenda.py
