[project]
name = "town-meetings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.11.16",
    "anthropic>=0.49.0",
    "bs4>=0.0.2",
    "deepdiff>=8.4.2",
    "mcp>=1.6.0",
    "prompt_toolkit>=3.0.43",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short -s"
